other/kubernetes-in-action/hellogo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hellogo
spec:
  containers:
    - image: docker.io/proz/hellogo
      name: hellogo
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
