other/kubernetes-in-action/kubik-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubik
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubik
