other/kubernetes-in-action/kubik-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubik
spec:
  rules:
  - host: kubik.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubik-nodeport
          servicePort: 80
